# folio-updater

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  build.ps1  folio-prod.spec  folio.spec  pyproject.toml  pytest.ini  requirements.txt  test.ipynb
.github/ISSUE_TEMPLATE/: default-issue.md
.github/workflows/: build-executable.yml
docs/: account-management.md  forex-rates.md  import-logging.md  querying.md
docs/download/: ibkr-integration.md  wealthsimple-integration.md
docs/import/: account-management.md  duplicate-approval.md  settlement-dates.md  transformations.md
docs/transactions/: ibkr-integration.md  import-logging.md  merge-transforms.md
notebooks/: db.ipynb  forex.ipynb  read_folio.ipynb  test.ipynb  tickers.ipynb
scripts/: demo_import_logging.py  extract_changelog.py  import_statements.py  import_txns.py  prepare_changelog.py  run_performance_test.py
scripts/utils/: csv_to_md.py
src/: __init__.py  app_context.py  bootstrap.py  config.py  constants.py  db.py  excel_importer.py  folio_setup.py  logging_config.py  logging_setup.py  mock_data.py  schema.py  setup_data.py
src/app/: __init__.py  app_context.py  bootstrap.py
src/cli/: __init__.py  console.py  display.py  main.py  query_parser.py  test_console.py
src/cli/commands/: __init__.py  demo.py  download.py  generate.py  getfx.py  import_cmd.py  settle_info.py  tickers.py
src/datagen/: __init__.py  folio_setup.py  mock_data.py
src/db/: __init__.py  db.py  filters.py  formatters.py  helpers.py  mappers.py  pipeline.py  preparers.py  queries.py  schema.py  schema_manager.py  table_manager.py  transformers.py  utils.py
src/exporters/: __init__.py  excel_exporter.py  forex_exporter.py  parquet_exporter.py  transaction_exporter.py
src/import/: excel_importer.py
src/importers/: __init__.py  excel_importer.py
src/mock/: folio_setup.py  mock_data.py
src/models/: __init__.py  activity_feed_item.py  base.py  import_results.py
src/models/wealthsimple/: __init__.py  account.py  activity_feed_item.py  monthly_statement_txn.py
src/services/: __init__.py  forex_service.py  ibkr_service.py  wealthsimple_service.py
src/utils/: __init__.py  backup.py  config.py  constants.py  log_console.py  logging_setup.py  optional_fields.py  settlement_calculator.py  transforms.py
tests/: __init__.py  conftest.py  test_cli_commands.py  test_config.py  test_db.py  test_excel_exporter.py  test_excel_importer.py  test_folio_setup.py  test_forex_exporter.py  test_merge_groups.py  test_performance.py  test_schema_manager.py  test_settlement_calculator.py  test_setup_data.py  test_transaction_exporter.py  test_transforms.py  test_types.py
tests/fixtures/: __init__.py  dataframe_cache.py  ibkr_mocking.py  test_data_factory.py  wealthsimple_mocking.py
tests/helpers/: cli.py  dataframe.py
tests/utils/: dataframe_utils.py
