[project]
name = "folio-updater"
version = "0.1.0"
authors = [
    { name = "Deigue"},
]
description = "Folio Updater"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pyyaml>=6.0.2",
]

[tool.coverage.run]

[tool.coverage.report]
show_missing = true
omit = ['*/__init__.py']

[tool.coverage.paths]

[tool.ruff]
line-length = 88
lint.extend-select = ["ALL"]
lint.ignore = ["D413", "INP001", "S608"]
src = ["src"]
exclude = ["**/Lib/**", "**/coverage/**", "**/.venv/**", "**/.git/**", "**/.vscode/**"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T201"]
"scripts/*" = ["T201"]
"tests/*" = ["S101", "D103"]

[tool.uv]
managed=true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "ruff>=0.12.10",
]
experiments = [
    "keyring>=25.5.0",
    "ws-api>=0.16.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
