[project]
name = "folio-updater"
version = "0.1.0"
authors = [
    { name = "Deigue"},
]
description = "Folio Updater"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pandas-market-calendars>=4.0.0",
    "pyyaml>=6.0.2",
    "typer>=0.9.0",
]

[project.scripts]
folio = "cli.main:main"

[tool.pytest.ini_options]
# sync addopts with .vscode/settings.json
addopts = "--color=yes -vv"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(name)s(%(lineno)d): %(message)s"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "no_mock_forex: Disable the mock_forex_data fixture for this test or module."
]

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
omit = [
    '*/__init__.py',
    'tests/test_performance.py'
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "except.*Error.*:",
    "except.*Exception.*:"
]


[tool.coverage.paths]

[tool.ruff]
line-length = 88
lint.extend-select = ["ALL"]
lint.ignore = ["D413", "INP001", "S608", "D203", "D213"]
src = ["src"]
exclude = ["**/Lib/**", "**/coverage/**", "**/.venv/**", "**/.git/**", "**/.vscode/**"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T201", "F811"]
"scripts/*" = ["T201"]
"tests/*" = ["S101", "D103", "PLR0913", "PLR2004"]

[tool.uv]
managed=true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pyinstaller>=6.16.0",
    "ruff>=0.12.10",
]
experiments = [
    "keyring>=25.5.0",
    "ws-api>=0.16.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
